# pueblo-vivo

./: .gitignore  README.md
brain/: pyproject.toml  requirements.txt
brain/experiments/: party.py
brain/pueblo/: __init__.py  agent.py  config.py  conversation.py  llm.py  memory.py  planning.py  reflection.py  runner.py  scenarios.py  server.py  simulation.py  voice.py  world.py
brain/scripts/: live_smoke.py  plan_probe.py  voice_probe.py  ws_client.py
brain/tests/: conftest.py  test_live.py  test_llm.py  test_memory.py  test_runner.py  test_server.py  test_simulation.py
docs/: demo-clip-guion.md  demo-clip-script-en.md  demo-clip-subtitles-en.srt  sample-party-run.txt
docs/superpowers/plans/: 2026-06-29-environment-and-dialogue.md  2026-06-29-villager-character-models.md
docs/superpowers/specs/: 2026-06-29-escenario-y-dialogos-design.md  2026-06-29-modelado-personajes-design.md  2026-06-29-pueblo-vivo-design.md
unity/: SETUP.md
unity/Assets/Editor/: BuildAvatarPrefabs.cs  BuildEnvironmentPrefabs.cs  SceneBootstrap.cs
unity/Assets/Resources/Avatars/: Barbarian.prefab  Knight.prefab  Mage.prefab  Ranger.prefab  Rogue.prefab  Rogue_Hooded.prefab  VillagerAnimator.controller
unity/Assets/Resources/Environment/: barrel.prefab  building_church_green.prefab  crate_A_big.prefab  (+19 more)
unity/Assets/Scripts/: AgentAvatar.cs  AvatarCatalog.cs  BrainClient.cs  DirectorUI.cs  EnvironmentCatalog.cs  EnvironmentDecorator.cs  GossipGraph.cs  PlayerController.cs  SpeechBubble.cs  VillageController.cs
unity/ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt
